<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_angka"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/rg_numbers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:dividerPadding="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <RadioButton
            android:id="@+id/rb_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_10" />

        <RadioButton
            android:id="@+id/rb_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_20" />

        <RadioButton
            android:id="@+id/rb_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_30" />

        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/_50" />

        <RadioButton
            android:id="@+id/rb_60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/rb_60" />

        <Button
            android:id="@+id/pilihangka"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_lanjutkeun" />

    </RadioGroup>
</LinearLayout>